# claude-code-cost

./: README.md  README_CN.md  main.py  model_pricing.yaml  pyproject.toml
.github/workflows/: ci.yml  test.yml
claude_code_cost/: __init__.py  analyzer.py  billing.py  cli.py  config.py  i18n.py  model_pricing.yaml  models.py
tests/: generate_test_data.py  test_verification.py
