[project]
name = "claude-cost"
version = "1.0.0"
description = "Claude Code Cost Analyzer"
authors = [
    {name = "keakon"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=10.0.0",
]

[project.scripts]
claude-cost = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "/.venv",
    "/.git",
    "*.jsonl",
    "*.json",
    "__pycache__",
]

[tool.uv]
dev-dependencies = []
